--- a/card_trading_game_app/pubspec.yaml
+++ b/card_trading_game_app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   go_router: ^12.1.3
+  flutter_hooks: ^0.20.3
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +62,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/bg_images/
+    - assets/images/logo_images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -74,12 +76,36 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: InterLight
+      fonts:
+        - asset: assets/fonts/inter/Inter-Light.ttf
+          weight: 300
+    - family: InterRegular
+      fonts:
+        - asset: assets/fonts/inter/Inter-Regular.ttf
+          weight: 400
+    - family: InterMedium
+      fonts:
+        - asset: assets/fonts/inter/Inter-Medium.ttf
+          weight: 500
+    - family: InterSemiBold
+      fonts:
+        - asset: assets/fonts/inter/Inter-SemiBold.ttf
+          weight: 600
+    - family: InterBold
+      fonts:
+        - asset: assets/fonts/inter/Inter-Bold.ttf
+          weight: 700
+    - family: InterExtraBold
+      fonts:
+        - asset: assets/fonts/inter/Inter-ExtraBold.ttf
+          weight: 800
+    - family: InterBlack
+      fonts:
+        - asset: assets/fonts/inter/Inter-Black.ttf
+          weight: 900
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
