--- a/card_trading_game_app/pubspec.yaml
+++ b/card_trading_game_app/pubspec.yaml
@@ -63,6 +63,8 @@ flutter:
     - assets/images/
     - assets/images/bg_images/
     - assets/images/logo_images/
+    - assets/images/profile_images/
+    - assets/images/icon_images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
