--- a/card_trading_game_app/pubspec.yaml
+++ b/card_trading_game_app/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
     sdk: flutter
   flutter_hooks: ^0.20.3
   flutter_riverpod: ^2.4.9
+  flutter_svg: ^2.0.9
+  font_awesome_flutter: ^10.6.0
   go_router: ^12.1.3
   hooks_riverpod: ^2.4.9
 
@@ -57,6 +59,7 @@ flutter:
     - assets/images/logo_images/
     - assets/images/profile_images/
     - assets/images/icon_images/
+    - assets/svg_images/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
