--- a/card_trading_web/pubspec.yaml
+++ b/card_trading_web/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   go_router: ^12.1.3
   hooks_riverpod: ^2.4.9
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
