--- a/card_trading_web/pubspec.yaml
+++ b/card_trading_web/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_riverpod: ^2.4.9
   flutter_svg: ^2.0.9
   font_awesome_flutter: ^10.6.0
+  get_it: ^7.6.4
   go_router: ^12.1.3
   hooks_riverpod: ^2.4.9
   shared_preferences: ^2.2.2
