--- a/card_trading_web/pubspec.yaml
+++ b/card_trading_web/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get_it: ^7.6.4
   go_router: ^12.1.3
   hooks_riverpod: ^2.4.9
+  lottie: ^2.7.0
   shared_preferences: ^2.2.2
 
 dev_dependencies:
@@ -62,6 +63,7 @@ flutter:
     - assets/images/profile_images/
     - assets/images/icon_images/
     - assets/svg_images/
+    - assets/lottie/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
